--- a/partials/api/callbacky.html
+++ b/partials/api/callbacky.html
@@ -2,27 +2,25 @@
 <div><span class="hint"></span>
 </div>
 </h1>
-<div><div class="callbacky-page"><p>Callbacky is the module of Barney that allow you 
+<div><div class="callbacky-page"><h2 id="callbacky">Callbacky</h2>
+<p>Callbacky is the module of Barney that allow you 
 to bind and trigger a function from different points in your code (i.e: controllers, services, ...).</p>
-<h2 id="import-module">Import module</h2>
-<p>To import Callbacky module, include barney.callbacky to 
-your web application module (usually in app.js file)
-<pre class="prettyprint linenums">
-angular.module('yourApplicationModule', [
-    'barney.callbacky'
-])
-</pre>
-<p>Remember to include the external javascript files you need:</p>
+<h2 id="usage">Usage</h2>
+<p>To use <strong>Callbacky</strong> module you have to include the <strong>Callbacky</strong> javascript files in your index.html:</p>
 <pre class="prettyprint linenums">
 
   &lt;!-- Callbacky module --&gt;
-  &lt;script type="text/javascript" src="./bower_components/barney/callbacky/callbacky.mod.js"&gt; 
-
-  &lt;!-- Callbacky service --&gt;
-  &lt;script type="text/javascript" src="./bower_components/barney/callbacky/callbacky.pro.js"&gt; 
+  &lt;script type="text/javascript" src="./bower_components/barney/dist/callbacky.min.js"&gt; 
 
 </pre>
 <h2 id="init-callbacky">Init Callbacky</h2>
 <p>Before using Callbacky module, it must be initialized. 
 To initialize Callbacky you can use the Callbacky method <a href="#/api/callbacky.BarneyCallbacky#methods_init">init</a>.</p>
+<h2 id="methods">Methods:</h2>
+<ul>
+<li><a href="#/api/callbacky.BarneyCallbacky#methods_bind">bind</a></li>
+<li><a href="#/api/callbacky.BarneyCallbacky#methods_clean">clean</a></li>
+<li><a href="#/api/callbacky.BarneyCallbacky#methods_init">init</a></li>
+<li><a href="#/api/callbacky.BarneyCallbacky#methods_trigger">trigger</a></li>
+</ul>
 </div></div>
