--- a/partials/api/newton.html
+++ b/partials/api/newton.html
@@ -2,7 +2,8 @@
 <div><span class="hint"></span>
 </div>
 </h1>
-<div><div class="newton-page"><p>Newton is the module of Barney that allows you to track events and pages with Newton library</p>
+<div><div class="newton-page"><h2 id="newton">Newton</h2>
+<p>Newton is the module of Barney that allows you to track events and pages with Newton library</p>
 <h2 id="import-module">Import module</h2>
 <p>To import Newton module, include barney.newton to 
 your web application module (usually in app.js file)
